@@ -1,4 +1,5 @@
 Version 5.9.19
+- Added a warning for mixing tabs and spaces in Spin code
 - Implemented SPR[] in bytecode (thanks Ada)
 - Made SPR[] work more like Spin1 (thanks Ada)
 
